--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "author": "Darpan",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "buffer": "^6.0.3",
+    "parcel": "^2.12.0",
+    "process": "^0.11.10",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1"
   },
   "dependencies": {
     "aws-amplify": "^5.3.18"
